# picturescraper

./: .env.example  .gitignore  README.md  pyproject.toml
src/picturescraper/: __init__.py  api.py  cli.py  config.py  models.py  query.py  service.py  storage.py
src/picturescraper/clients/: bing_images.py  danish_sources.py  flickr.py  openverse.py  web_fallback.py
src/picturescraper/web/: app.js  index.html  styles.css
tests/: test_query.py  test_service.py  test_storage.py
